Add meta description and keywords

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
    <!--===================== End CSS ======================-->
 
    <!--===================== Start Imprtant ======================-->
+   <meta name="keywords" content="iyna, IYNA, iyna october, IYNA OCTOBER, IYNA October, Iyna oct, OCT, Chapter, neuro, neuroscience, neurons, IYNA October Chapter, IYNA OCTOBER CHAPTER, iyna october chapter">
+   <meta name="description" content="Discover the future of neuroscience. We are a group of young neuroscientists who are passionately dedicated to help the next generation of neuroscientists, hoping to achieve a better understanding of neuroscience through our events, websites, sessions, and research papers.">
    <link rel="shortcut icon" type="image/x-icon" href="resources/imgs/IYNA-favicon.png" />
    <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
