--- a/Contact.html
+++ b/Contact.html
@@ -96,19 +96,19 @@
                         <h2 class="form-title">Send us a message</h2>
                         <div class="form-fields">
                             <div class="form-group">
-                                <input type="text" class="fname" placeholder="First Name">
+                                <input type="text" name="First name" class="fname" placeholder="First Name">
                             </div>
                             <div class="form-group">
-                                <input type="text" class="lname" placeholder="Last Name">
+                                <input type="text" name="Last name" class="lname" placeholder="Last Name">
                             </div>
                             <div class="form-group">
-                                <input type="email" class="email" placeholder="Mail">
+                                <input type="email" name="Email Address" class="email" placeholder="Email address">
                             </div>
                             <div class="form-group">
-                                <input type="number" class="phone" placeholder="Phone">
+                                <input type="tel" name="Phone number" class="phone" placeholder="Phone nmber">
                             </div>
                             <div class="form-group">
-                                <textarea name="message" placeholder="Write your message"></textarea>
+                                <textarea name="Message" placeholder="Write your message"></textarea>
                             </div>
                         </div>
                         <input type="submit" value="Send Message" class="submit-button">
