--- a/Contact.html
+++ b/Contact.html
@@ -77,7 +77,7 @@
                         </li>
                         <li>
                             <i class="fas fa-paper-plane"></i>
-                            <span>Email:</span> <a href="mailto:iynaoct@gmail.com">iynaoct@gmail.com</a>
+                            <span>Email:</span> <a href="mailto:iynaoctchapter@gmail.com">iynaoctchapter@gmail.com</a>
                         </li>
                         <li>
                             <i class="fas fa-globe"></i>
